Initial HTML Documentation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,59 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="row">
+        <div class="column">
+            <div class="header">
+                <h3>Free</h3>
+            </div>
+            <div class="textDecoration">
+                <p>Publish a single Ad, it never expires</p>
+            </div>
+            <div class="cost">
+                <h2>Free</h2>
+                <p>lasts forever</p>
+            </div>
+            <div class="button">
+                Start Now
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="header">
+                <h3>Premium</h3>
+            </div>
+            <div class="textDecoration">
+                <p>Online hassle-free contratract signature
+                    with tenants. We take care of legal stuff 
+                    on your behalf.
+                </p>
+            </div>
+            <div class="cost">
+                <h2>$ 49,90</h2>
+                <p>pay every 30 days</p>
+            </div>
+            <div class="button">
+                Start Now
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="header">
+                <h3>Plus</h3>
+            </div>
+            <div class="textDecoration">
+                <p>Professional photos of youmhouse taken
+                    by us.
+                </p>
+            </div>
+            <div class="cost">
+                <h2>$299,90</h2>
+                <p>pay only if you rent</p>
+            </div>
+            <div class="button">
+                Start Now
+            </div>
+        </div>
+    </div>
 </body>
 </html>
