--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Our services</h1>
     <div class="row">
         <div class="column">
             <div class="header">
