--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+     <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Our services</h1>
     <div class="row">
-        <div class="column">
+        <div class="column infoOne">
             <div class="header">
+                <p class="icon"><i class="fas fa-home"></i></p>
                 <h3>Free</h3>
             </div>
             <div class="textDecoration">
                 <p>Publish a single Ad, it never expires</p>
+                <hr>
             </div>
             <div class="cost">
                 <h2>Free</h2>
@@ -25,8 +28,11 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column infoTwo">
             <div class="header">
+                <div class="image">
+                <img src="img/Screenshot_2.png" alt="">
+                </div>
                 <h3>Premium</h3>
             </div>
             <div class="textDecoration">
@@ -34,6 +40,7 @@
                     with tenants. We take care of legal stuff 
                     on your behalf.
                 </p>
+                <hr>
             </div>
             <div class="cost">
                 <h2>$ 49,90</h2>
@@ -44,14 +51,16 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column infoThree">
             <div class="header">
+                <i class="fas fa-city"></i>
                 <h3>Plus</h3>
             </div>
             <div class="textDecoration">
                 <p>Professional photos of youmhouse taken
                     by us.
                 </p>
+                <hr>
             </div>
             <div class="cost">
                 <h2>$299,90</h2>
