Adding new features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="column infoOne">
             <div class="header">
                 <p class="icon"><i class="fas fa-home"></i></p>
-                <h3>Free</h3>
+                <h3 class="free">Free</h3>
             </div>
             <div class="textDecoration">
                 <p>Publish a single Ad, it never expires</p>
@@ -24,7 +24,7 @@
                 <p>lasts forever</p>
             </div>
             <div class="button">
-                Start Now
+               <a href="#">Start Now</a>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
                 <div class="image">
                 <img src="img/Screenshot_2.png" alt="">
                 </div>
-                <h3>Premium</h3>
+                <h3 class="premium">Premium</h3>
             </div>
             <div class="textDecoration">
                 <p>Online hassle-free contratract signature
@@ -46,9 +46,9 @@
                 <h2>$ 49,90</h2>
                 <p>pay every 30 days</p>
             </div>
-            <div class="button">
-                Start Now
-            </div>
+            <div class="buttonTwo">
+                <a href="#">Start Now</a>
+             </div>
         </div>
 
         <div class="column infoThree">
