adding new feature

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="image">
                 <img src="img/Screenshot_2.png" alt="">
                 </div>
-                <h3 class="premium">Premium</h3>
+                <h3 class="premium" style="color:#e84a5f">Premium</h3>
             </div>
             <div class="textDecoration">
                 <p>Online hassle-free contratract signature
@@ -53,8 +53,10 @@
 
         <div class="column infoThree">
             <div class="header">
-                <i class="fas fa-city"></i>
-                <h3>Plus</h3>
+             <div class="imageTwo">
+                 <img src="img/house3.png" alt="">
+             </div>
+                <h3 class="plus">Plus</h3>
             </div>
             <div class="textDecoration">
                 <p>Professional photos of youmhouse taken
@@ -66,9 +68,9 @@
                 <h2>$299,90</h2>
                 <p>pay only if you rent</p>
             </div>
-            <div class="button">
-                Start Now
-            </div>
+            <div class="buttonThree">
+                <a href="#">Start Now</a>
+             </div>
         </div>
     </div>
 </body>
