--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
      <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>Card variation three</title>
 </head>
 <body>
     <h1>Our services</h1>
@@ -17,7 +17,7 @@
             </div>
             <div class="textDecoration">
                 <p>Publish a single Ad, it never expires</p>
-                <hr>
+                <hr class="hrOne">
             </div>
             <div class="cost">
                 <h2>Free</h2>
@@ -59,7 +59,7 @@
                 <h3 class="plus">Plus</h3>
             </div>
             <div class="textDecoration">
-                <p>Professional photos of youmhouse taken
+                <p>Professional photos of your house taken
                     by us.
                 </p>
                 <hr>
