--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Our services</h1>
     <div class="row">
         <div class="column infoOne">
+           
             <div class="header">
                 <p class="icon"><i class="fas fa-home"></i></p>
                 <h3 class="free">Free</h3>
@@ -28,7 +29,9 @@
             </div>
         </div>
 
+
         <div class="column infoTwo">
+            <div class="tabletInfoOne">
             <div class="header">
                 <div class="image">
                 <img src="img/Screenshot_2.png" alt="">
@@ -49,6 +52,7 @@
             <div class="buttonTwo">
                 <a href="#">Start Now</a>
              </div>
+            </div>
         </div>
 
         <div class="column infoThree">
