--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Our services</h1>
     <div class="row">
         <div class="column infoOne">
-           
+           <div class="mobileInfoOne">
             <div class="header">
                 <p class="icon"><i class="fas fa-home"></i></p>
                 <h3 class="free">Free</h3>
@@ -28,7 +28,7 @@
                <a href="#">Start Now</a>
             </div>
         </div>
-
+    </div>
 
         <div class="column infoTwo">
             <div class="tabletInfoOne">
@@ -56,6 +56,7 @@
         </div>
 
         <div class="column infoThree">
+            <div class="mobileInfoThree">
             <div class="header">
              <div class="imageTwo">
                  <img src="img/house3.png" alt="">
@@ -77,5 +78,6 @@
              </div>
         </div>
     </div>
+</div>
 </body>
 </html>
